# Urban-Waste-Collection

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  logging.toml  pyproject.toml
.github/workflows/: CI.yml
graphhopper/: .gitignore  README.md  config.yml
graphhopper/custom_models/: truck.json
notebooks/: exploration.ipynb  exploratory_analysis.ipynb  managerial_insights.ipynb  sensordata.ipynb  sensors.ipynb
osrm/: .gitignore  README.md  run.bat
osrm/profiles/: LICENSE  README.md  car.lua
src/: ingest.py
tests/: README.md  conftest.py  helpers.py  test.db
tests/classes/: test_Database.py  test_LogisticRegression.py  test_OverflowModel.py  test_Simulator.py
tests/functions/: test_f2i.py  test_generate_events.py  test_make_model.py
tests/measures/: test_avg_excess_volume.py  test_avg_fill_factor.py  test_avg_num_arrivals_between_service.py  test_avg_num_routes_per_day.py  test_avg_route_clusters.py  test_avg_route_distance.py  test_avg_route_duration.py  test_avg_route_stops.py  test_avg_service_level.py  test_num_arrivals.py  test_num_arrivals_per_hour.py  test_num_services.py  test_num_unserved_containers.py
tests/strategies/: test_BaselineStrategy.py  test_GreedyStrategy.py  test_PrizeCollectingStrategy.py  test_RandomStrategy.py
text/: notes.md  notes.tex
waste/: __init__.py  analyze.py  analyze_results.py  arrivals.py  constants.py  distance.py  ingest.py  matrix.py  plot.py  plot_routes.py  run.py  simulate.py
waste/classes/: Cluster.py  Configuration.py  Container.py  Database.py  Depot.py  Event.py  LogisticRegression.py  OverflowModel.py  Result.py  Route.py  Simulator.py  Vehicle.py  __init__.py
waste/enums/: EventStatus.py  EventType.py  LocationType.py  __init__.py
waste/functions/: __init__.py  f2i.py  generate_events.py  make_model.py  seed_strategy.py  solve_vrp.py
waste/measures/: __init__.py  avg_excess_volume.py  avg_fill_factor.py  avg_num_arrivals_between_service.py  avg_num_routes_per_day.py  avg_num_services.py  avg_route_clusters.py  avg_route_distance.py  avg_route_duration.py  avg_route_stops.py  avg_service_level.py  min_service_level.py  num_arrivals.py  num_arrivals_per_hour.py  num_services.py  num_unserved_containers.py
waste/simulate/: __init__.py  random.py
waste/simulate/classes/: Container.py  Database.py  Environment.py  Event.py  RandomStream.py  Simulator.py  Strategy.py  Vehicle.py  __init__.py
waste/strategies/: BaselineStrategy.py  GreedyStrategy.py  PrizeCollectingStrategy.py  RandomStrategy.py  __init__.py  baseline.py  prize.py  random.py
