[tool.poetry]
name = "waste"
version = "0.1.0"
description = ""
authors = [
    "Niels A. Wouda <n.a.wouda@rug.nl>",
    "Marjolein Aerts-Veenstra <m.aerts-veenstra@rug.nl>",
    "Nicky van Foreest <n.d.van.foreest@rug.nl>"
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
pandas = "^1.4.2"
numpy = "^1.22.3"
openpyxl = "^3.0.9"
matplotlib = "^3.5.1"
tomli = "^2.0.1"
pyvrp = "0.6.1"
folium = "^0.14.0"
jupyter = "^1.0.0"
scipy = "^1.11.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pre-commit = "^3.2.2"
pytest = "^7.4.0"

[tool.poetry.scripts]
distance = "waste.distance:main"
ingest = "waste.ingest:main"
simulate = "waste.simulate:main"
analyze = "waste.analyze:main"
plot = "waste.plot:main"

[tool.black]
line-length = 79

[tool.ruff]
ignore-init-module-imports = true
line-length = 79
select = [
    "E", "F", "I", "NPY", "PYI", "Q", "RET", "RSE", "RUF", "SLF", "SIM", "TCH"
]

[tool.ruff.isort]
case-sensitive = true
known-first-party = ["waste"]

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
